<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">E-Supermarket</string>
    <string name="kami_akan_mengirimkan_anda_otp_di_nomor_ponsel_ini">Kami akan mengirimkan Anda OTP di nomor ponsel ini</string>
    <string name="_62">+62-</string>
    <string name="xxxxxxxxxxx">08xxxxxxxxx</string>
    <string name="get_otp">masuk</string>
    <string name="masukkan_otp_yang_dikirim_ke">Masukkan OTP yang dikirim ke</string>
    <string name="belum_menerima_otp">Belum menerima OTP?</string>
    <string name="kirim_ulang_otp">KIRIM ULANG OTP</string>
    <string name="verify">VERIFIKASI</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="string_otp_verification" />
    <string name="verifikasi">VERIFIKASI</string>
    <string-array name="Jenis_Kelamin" tools:ignore="ExtraTranslation">
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>

    <string-array name="Metode_Bayar" tools:ignore="ExtraTranslation">
        <item>COD</item>
        <item>TRANSFER</item>
    </string-array>

    <array name="Satuan">
        <item>Kg</item>
        <item>Gr</item>
        <item>Pcs</item>
        <item>Lusin</item>
        <item>Kodi</item>
        <item>Gross</item>
        <item>Pack</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Kami akan mengirimkan Anda OTP di email ini</string>
    <string name="title_activity_kurir_maps">Map</string>
    <string name="title_activity_penjual_maps">Map</string>
    <string name="title_activity_maps_edit_penjual">Map</string>
    <string name="title_activity_maps_order">Map</string>
    <string name="default_notification_channel_id">Notifikasi</string>
    <string name="title_activity_maps_detail_pesanan">Map</string>
</resources>